changed banner btn style with custom css

--- a/style.css
+++ b/style.css
@@ -2,3 +2,8 @@
 *{
     font-family: 'Lato', sans-serif;
 }
+.carousel .btn-circle{
+    background: #121212;
+    border: none;
+    color: #fff;
+}
